syntax = "proto3";

package config;

option go_package="github.com/xxii22w/grpc-example/module6/proto";

service ConfigService {
    rpc LongRunning (LongRunningRequest) returns (LongRunningResponse);
    rpc Flaky(FlakyRequest) returns (FlakyResponse);
    rpc GetServerAddress(GetServerAddressRequest) returns (GetServerAddressResponse);
}

message LongRunningRequest {
}

message LongRunningResponse {
}

message FlakyRequest {
}

message FlakyResponse {
}

message GetServerAddressRequest {
}

message GetServerAddressResponse {
    string address = 1;
}